--- a/GrammarApp/GrammarApp.csproj
+++ b/GrammarApp/GrammarApp.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AstNodePrinter.cs" />
+    <Compile Include="FileWorker.cs" />
+    <Compile Include="linker\Codegenerator.cs" />
     <Compile Include="MyGrammarLexer.cs" />
     <Compile Include="MyGrammarParser.cs" />
     <Compile Include="Nodes.cs" />
@@ -66,6 +68,7 @@
   <ItemGroup>
     <Content Include="Input.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
